--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.3.0",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
     "multer": "^1.4.0",
