--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "passport-strava-oauth2": "^0.1.3",
     "socket.io": "^2.1.1",
     "strava-v3": "^1.14.0",
+    "swagger-ui-express": "^4.0.2",
     "uuid": "^3.3.2"
   }
 }
