--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 /backend/storage
 /backend/stravapy/__pycache__
 /backend/stravapy/.idea
+/backend/stravapy/user_combinations_models
+/backend/stravapy/user_combinations_predictions
+/backend/stravapy/summary.csv
 /client/node_modules
 /client/src/assets/scss/material-dashboard-pro-react.css
 /client/.pnp
