--- a/backend/package.json
+++ b/backend/package.json
@@ -27,8 +27,9 @@
     "mysql": "^2.16.0",
     "node-cron": "^2.0.3",
     "passport": "^0.4.0",
-    "passport-strava-oauth2": "^0.1.3",
-    "socket.io": "^2.1.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-strava-oauth2": "^0.1.3",   
     "strava-v3": "^1.14.0",
     "swagger-ui-express": "^4.0.2",
     "uuid": "^3.3.2"
