--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-big-calendar": "0.20.1",
     "react-bootstrap-sweetalert": "4.4.1",
     "react-chartist": "0.13.1",
+    "react-confirm-alert": "^2.4.1",
     "react-datetime": "2.15.0",
     "react-dom": "16.5.2",
     "react-google-maps": "9.4.5",
