--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "debug": "node --inspect server.js"
+    "debug": "nodemon --inspect server.js"
   },
   "author": "dreamhero418",
   "license": "ISC",
