--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "debug": "nodemon --inspect server.js"
+    "debug": "nodemon --inspect server.js",
+    "migration": "node migration.js up",
+    "migration-down": "node migration.js down",
+    "migration-refresh": "node migration.js refresh"
   },
   "author": "dreamhero418",
   "license": "ISC",
@@ -26,6 +29,7 @@
     "morgan": "^1.9.0",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
+    "mysql-migrations": "^1.0.6",
     "node-cron": "^2.0.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
