--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
     "debug": "nodemon --inspect server.js",
+    "migration-create": "node migration.js add migration _table ''",
     "migration": "node migration.js up",
     "migration-down": "node migration.js down",
     "migration-refresh": "node migration.js refresh"
