--- a/client/package.json
+++ b/client/package.json
@@ -29,9 +29,7 @@
     "react-table": "6.8.6",
     "react-tagsinput": "3.19.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0"
+    "redux-thunk": "^2.3.0"  
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
