--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,9 @@
     "perfect-scrollbar": "1.4.0",
     "react": "16.5.2",
     "react-big-calendar": "0.20.1",
-    "react-bootstrap-sweetalert": "4.4.1",
     "react-chartist": "0.13.1",
     "react-confirm-alert": "^2.4.1",
+    "react-datepicker": "^2.6.0",
     "react-datetime": "2.15.0",
     "react-dom": "16.5.2",
     "react-google-maps": "9.4.5",
@@ -29,7 +29,7 @@
     "react-table": "6.8.6",
     "react-tagsinput": "3.19.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"  
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
