package for food select item

--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "react": "16.5.2",
     "react-big-calendar": "0.20.1",
     "react-chartist": "0.13.1",
-    "react-confirm-alert": "^2.4.1", 
+    "react-confirm-alert": "^2.4.1",
     "react-datetime": "2.15.0",
     "react-dom": "16.5.2",
     "react-google-maps": "9.4.5",
@@ -24,6 +24,7 @@
     "react-redux": "6.0.0",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.5",
+    "react-select": "^3.0.4",
     "react-swipeable-views": "0.13.0",
     "react-table": "6.8.6",
     "react-tagsinput": "3.19.0",
