static image url and env

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
 NODE_PATH=./src
 REACT_APP_ENV=development
 REACT_APP_ROUTE_SERVER=http://127.0.0.1:3001/api/
+REACT_APP_STORAGE=http://127.0.0.1:3001/storage/assets/
